# - make one entry per person
# - group logical changes together
# - separate logically distinct changes (change sets) by a single blank line
# - entries should be brief
# - an entry should not explain why a change was made, but rather what the change was
#   (the explanation of why belongs in the source code itself)
#
# http://www.cybop.net
# - Cybernetics Oriented Programming -
#
# @version $Revision: 1.132 $ $Date: 2009-01-30 00:33:58 $ $Author: christian $
# @author Christian Heller <christian.heller@tuxtax.de>
#

2009-01-29  Christian Heller  <christian.heller@tuxtax.de>
        * Reactivate storage and manipulation of terminal settings at console startup, so that pressing
            the <enter> button is not required for input; restore settings at console shutdown
        * Investigate signal processing, which does not work reliably
        * Add mutex lock to functions "read_gnu_linux_console_character", wherever "fgetwc" or "ungetwc" are called;
            this is to prevent errors due to different threads manipulating gnu/linux console characters at the same time;
            this was leading to wrong behaviour, because (unpredictably) only some actions were accepted on gnu/linux console
        * Make CYBOL example application "ui_control" work

2009-01-28  Christian Heller  <christian.heller@tuxtax.de>
        * Investigate signal processing, which does not work reliably

2009-01-27  Christian Heller  <christian.heller@tuxtax.de>
        * Simplify file "checker.c"
        * Investigate why only the first interrupt signal, but not following interrupts
            are detected on gnu/linux console

2009-01-26  Christian Heller  <christian.heller@tuxtax.de>
        * Correct a few pointer issues in file "checker.c"
        * Search bug that not all interrupts arrive correctly in functions "check_interrupts" and "check_signal"

2009-01-25  Christian Heller  <christian.heller@tuxtax.de>