@@ -7,11 +7,10 @@
 # http://www.cybop.net
 # - Cybernetics Oriented Programming -
 #
-# @version $Revision: 1.101 $ $Date: 2009-01-30 00:33:58 $ $Author: christian $
+# @version $Revision: 1.102 $ $Date: 2009-01-30 12:59:29 $ $Author: christian $
 # @author Christian Heller <christian.heller@tuxtax.de>
 #
 
-        * Fix escape press once
         * Investigate why switching the actions from main window to about dialogue does not work
             (with the about dialogue shown, still only the actions of the main window are taken)
 
