@@ -14,9 +14,15 @@
 # http://www.cybop.net
 # - Cybernetics Oriented Programming -
 #
-# @version $Revision: 1.132 $ $Date: 2009-01-30 00:33:58 $ $Author: christian $
+# @version $Revision: 1.133 $ $Date: 2009-01-30 12:59:28 $ $Author: christian $
 # @author Christian Heller <christian.heller@tuxtax.de>
 #
+
+2009-01-30  Christian Heller  <christian.heller@tuxtax.de>
+        * Change terminal attributes in file "gnu_linux_console_starting_maintainer.c",
+            so that pressing a button causes an immediate reaction and does not wait for the next input
+            (before that, the application did only react to the escape button when pressing it twice or yet another button);
+            the terminal attribute "c_cc[VMIN]" had to be set to zero as value
 
 2009-01-29  Christian Heller  <christian.heller@tuxtax.de>
         * Reactivate storage and manipulation of terminal settings at console startup, so that pressing
